/*
 * $Id: ChangeLog,v 1.342 2002/08/09 17:58:57 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-08-10 21:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmInc() and hb_vmDec() support of DATE++ and DATE--.

2002-08-09 14:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/achoice.prg
    % Fixed Bug when nRight parameters is 79. When column 79 is used ,ie:achoice(00,00,24,79,aPesquisa), browsing an
     large array back make the display slower Reported by an Brazilian user

2002-08-09 09:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + Added HB_IS_NUMBER() only matches numbers vs. HB_IS_NUMERIC() which also matches HB_IT_DATE and HB_IT_STRING[].

  * source/vm/hvm.c
    ! Fixed hb_vmPlus() to correctly return date when one of the operands is a DATE and the other is a NUMBER.
    ! Fixed hb_vmPlus() to correctly return date when one of the operands is a DATE and the other is a DATE (like Clipper).
    ! Fixed hb_vmMinus() to correctly return date when the left operand is a DATE and the right operand is a NUMBER.

  * include/hbexprb.c
    + Added HB_P_ADDINT optimization to HB_P_MINUS
      /* Minus operations involving an integer will now be many times faster. */

  * source/rtl/win32ole.prg
  * tests/testole.prg
    * Renamed GetObject() to GetActiveObject() to avoid conflict with WINAPI GetObject()

2002-08-09 01:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    ! Finished implementation of GetObject()

  * tests/testole.prg
    * Modified demo to demonstrate usage of GetObject()

2002-08-08 12:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Modified HB_IS_NUMERIC() to accept HB_IT_DATE and HB_IT_STRING (length 1).

  * source/vm/hvm.c
    - Removed no longer needed hb_vmPopDate().