@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.342 2002/08/09 17:58:57 lculik Exp $
+ * $Id: ChangeLog,v 1.343 2002/08/11 04:03:32 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-08-10 22:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    + Added support for #[x]uncommand and #[x]untranslate
+    /* In order for the #command or #translate to be removed, it has to exactly matched with the #un* definition! */
 
 2002-08-10 21:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/hvm.c
